src/custom.css
/* Typography and Color Scheme */
:root {
    --nc-font-sans: Inter, 'Noto Sans JP', sans-serif;
    --nc-font-mono: 'Fira Code', monospace;
    /* Nord color scheme */
    /* Light */
    --nc-tx-1: #2e3440;
    --nc-tx-2: #3b4252;
    --nc-bg-1: #eceff4;
    --nc-bg-2: #e5e9f0;
    --nc-bg-3: #d8dee9;
    --nc-lk-1: #5e81ac;
    --nc-lk-2: #81a1c1;
    --nc-ac-1: #5e81ac;
    --nc-ac-tx: #eceff4;
    /* Dark */
    --nc-d-tx-1: #d8dee9;
    --nc-d-tx-2: #e5e9f0;
    --nc-d-bg-1: #2e3440;
    --nc-d-bg-2: #3b4252;
    --nc-d-bg-3: #434c5e;
    --nc-d-lk-1: #81a1c1;
    --nc-d-lk-2: #5e81ac;
    --nc-d-ac-1: #5e81ac;
    --nc-d-ac-tx: var(--nc-ac-tx);
}

@media (prefers-color-scheme: dark) {
	:root {
		--nc-tx-1: var(--nc-d-tx-1);
		--nc-tx-2: var(--nc-d-tx-2);
		--nc-bg-1: var(--nc-d-bg-1);
		--nc-bg-2: var(--nc-d-bg-2);
		--nc-bg-3: var(--nc-d-bg-3);
		--nc-lk-1: var(--nc-d-lk-1);
		--nc-lk-2: var(--nc-d-lk-2);
		--nc-lk-tx: var(--nc--dlk-tx);
		--nc-ac-1: var(--nc-d-ac-1);
		--nc-ac-tx: var(--nc--dac-tx);
	}
}

body {
    line-height: 1.75;
    font-feature-settings: "palt";
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1.20;
    font-family: 'Montserrat', 'Noto Sans JP', sans-serif;
    font-weight: 700;
    border: 0;
}

code {
    font-family: var(--nc-font-mono) !important;
    font-feature-settings: "palt" 0 !important;
}

/* Header */
header {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
    text-align: center;
}

header a {
    color: var(--nc-tx-1);
    text-decoration: none;
}

header a:hover {
    color: var(--nc-tx-1);
    text-decoration: underline;
}

/* Article */
.cover {
    width: 100%;
    border-radius: 15px;
    margin-bottom: 0.5rem;
}

/* Article List */
.postlist_item {
    margin: 1rem 0;
    border-bottom: 1px solid var(--nc-bg-3);
}

/* Bio */
.bio {
    color: var(--nc-tx-2);
    padding: 5px;
    margin: 4rem 0;
    background: var(--nc-bg-2);
    border: 1px solid var(--nc-bg-3);
    border-radius: 15px;
    padding: 2rem 1rem;
}

.bio_img img {
    border-radius: 50%;
}

@media (max-width: 639px) {
    .bio {
        text-align: center;
    }
    .bio_img {
        margin: 0 auto;
    }
}

@media (min-width: 640px) {
    .bio_header {
        display: flex;
        justify-content: space-around;
        align-items: center;
    }
    .bio_side {
        max-width: 25rem;
    }
}

